test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_channel_input_binary.draco
channel input binary ch;

proc main()void: a := 1; corp;


