test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_input_as_identifier.draco
int input;
 
proc main() void : a := 1; corp;
